syntax = "proto3";
option optimize_for = LITE_RUNTIME;
option csharp_namespace = "MMKiwi.CtaTracker.Model.Protobuf";

message Prediction
{
  int64 timestamp = 1;
  Type type = 2;
  bool is_delayed = 3;
  int64 predicted_time = 4;
  string prediction_text = 5;
  int32 stop_distance = 6;
  PassengerCount passenger_count = 7;
  string destination = 8;
  
  enum Type
  {
    Unknown = 0;
    Arrival = 1;
    Departure = 2;
  }
  
  enum PassengerCount
  {
    NotApplicable = 0;
    Full = 1;
    HalfEmpty = 2;
    Empty = 3;
  }
}